sudden significant performance drop with Eevee and parallax node tree #70325

Closed
opened 2019-09-28 13:21:20 +02:00 by MACHIN3 · 5 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-23 20:20, hash: 5a6ab6f594
Worked: c8df6f2cf9

Short description of error
I've started to see very significant performance drops in relation to Eevee and a parallax node tree I've been using for the past few years without issues.
c8df6f2cf9 from September 20th stilled worked fine and I've started to see this performance drop in 5a6ab6f594 from September 24th, although the issue couldhave appeared on any of the days following September 20th, I've skipped a few days, unfortunately.

The issue is most noticable when loading blend files cointaining materials useing the parallax node tree and if the scene is loaded in lookdev/rendered shading.
It can also be confirmed by just draging any material property, as shown in the video below. It's very sluggish and unresponsive in 5a6ab6f594 and upwards.

video demo
eevee_performance_drop_with_parallax_node_tree.blend

Exact steps for others to reproduce the error

  • open the blend file in a build since 5a6ab6f594
  • go to the shader editor and drag any material property in the "Simple Decal Group"
    • it should be quite sluggish
  • mute the parallax node group to the left
    • drag it again and notice the speedup
  • go back to the c8df6f2cf9 build, or any other build of this year
    • with the parallax node group NOT muted, draw a material property again and notice there is no slow down
**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-23 20:20, hash: `5a6ab6f594` Worked: `c8df6f2cf9` **Short description of error** I've started to see very significant performance drops in relation to Eevee and a parallax node tree I've been using for the past few years without issues. `c8df6f2cf9` from September 20th stilled worked fine and I've started to see this performance drop in `5a6ab6f594` from September 24th, although the issue couldhave appeared on any of the days following September 20th, I've skipped a few days, unfortunately. The issue is most noticable when loading blend files cointaining materials useing the parallax node tree and if the scene is loaded in lookdev/rendered shading. It can also be confirmed by just draging any material property, as shown in the video below. It's very sluggish and unresponsive in `5a6ab6f594` and upwards. [video demo ](https://youtu.be/kqoRH-qrMXc) [eevee_performance_drop_with_parallax_node_tree.blend](https://archive.blender.org/developer/F7778578/eevee_performance_drop_with_parallax_node_tree.blend) **Exact steps for others to reproduce the error** * open the blend file in a build since `5a6ab6f594` * go to the shader editor and drag any material property in the "Simple Decal Group" * it should be quite sluggish * mute the parallax node group to the left * drag it again and notice the speedup * go back to the `c8df6f2cf9` build, or any other build of this year * with the parallax node group NOT muted, draw a material property again and notice there is no slow down
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3

#70766 was marked as duplicate of this issue

#70766 was marked as duplicate of this issue
Clément Foucault was assigned by William Reynish 2019-09-28 17:21:34 +02:00

This issue was referenced by 5c79f2d0fb

This issue was referenced by 5c79f2d0fba7360488e591922f91aa858bd8d603

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Added subscribers: @fclem, @lichtwerk, @nokipaike, @ThinkingPolygons
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70325
No description provided.